--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0c2461">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Arena 2026">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="icon-192.png">
     <!-- META TAG PWA -->
     <meta name="theme-color" content="#0c2461">
     <meta name="apple-mobile-web-app-capable" content="yes">
